// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReactionsRowButton > renders the default reaction button 1`] = `
<div>
  <button
    aria-label="Alice and Bob reacted with 👍"
    class=""
    tabindex="0"
    type="button"
  >
    <span
      aria-hidden="true"
      class=""
    >
      👍
    </span>
    <span
      aria-hidden="true"
      class=""
    >
      2
    </span>
  </button>
</div>
`;

exports[`ReactionsRowButton > renders the selected reaction button 1`] = `
<div>
  <button
    aria-label="Alice and Bob reacted with 👍"
    class="mx_ReactionsRowButton_selected"
    tabindex="0"
    type="button"
  >
    <span
      aria-hidden="true"
      class=""
    >
      👍
    </span>
    <span
      aria-hidden="true"
      class=""
    >
      2
    </span>
  </button>
</div>
`;
